2009-05-27  Diego Novillo  <dnovillo@google.com>

	* tree-ssa-live.c (dump_scope_block): Document arguments.
	(dump_scope_blocks): Document.
	(debug_scope_blocks): New.
	* tree-flow.h (debug_scope_blocks): Declare.

2009-05-21  Denis Chertykov  <denisc@overta.ru>

	* doc/contrib.texi (Contributors): add myself to the list.

2009-05-28  Olivier Hainque  <hainque@adacore.com>

	* expr.c (target_align): New function.  Alignment the TARGET of an
	assignment may be assume to have.
	(highest_pow2_factor_for_target): Use it instead of relying on
	immediate tree attributes of TARGET, not necessarily honored when
	intermediate bitfields are involved.
	
2009-05-27  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/40266
	* config/i386/driver-i386.c (host_detect_local_cpu): Support
	AVX, SSE4, AES, PCLMUL and POPCNT.

2009-05-27  Diego Novillo  <dnovillo@google.com>

	* tree-pretty-print.c (dump_location): New.
	(dump_generic_node): Call it.
	Factor code to handle BLOCK nodes ...
	(dump_block_node): ... here.

2009-05-27  Rafael Avila de Espindola  <espindola@google.com>

	* Makefile.in (GCC_PLUGIN_H): New. Replace all uses of gcc-plugin.h with
	it.
	* doc/plugins.texi: Document that gcc-plugin.h must be the first to be
	included.
	* gcc-plugin.h: Include config.h and system.h.
	(IN_GCC): Define if not defined.

2009-05-27  Hans-Peter Nilsson  <hp@axis.com>

	PR middle-end/40249
	* Makefile.in (CRTSTUFF_CFLAGS): Replace -fno-inline-functions
	with -fno-inline.

2009-05-27  Shujing Zhao  <pearly.zhao@oracle.com>

	* config/m32r/m32r.c: Use REG_P, MEM_P and CONST_INT_P where
	applicable.
	* config/m32r/m32r.h: Ditto.
	* config/m32r/m32r.md: Ditto.
	* config/m32r/predicates.md: Ditto.

2009-05-27  Alexandre Oliva  <aoliva@redhat.com>

	* cgraph.c (dump_cgraph_node): Honor -fdump-noaddr.

2009-05-26  Basile Starynkevitch  <basile@starynkevitch.net>

	* doc/plugins.texi
	(Loading plugins): typo.
	(Plugin callbacks): Documented PLUGIN_INFO, PLUGIN_GGC_START,